# opentoken

./: .cnb.yml  .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  test_deepseek_200_cases.py  test_e2e_full.py  test_glm_cn_200_cases.py  test_regression.py  wrangler.toml
.github/workflows/: docker-image.yml
scripts/: live_doubao_regression.py  live_e2e_full.py  live_e2e_report.py  live_kimi_200_cases.py  live_provider_200_suite.py  live_provider_smoke.py  live_qwen_cn_200_cases.py  live_stream_regression.py  stress_test.py
src/opentoken/: main.py
tests/: conftest.py
tests/api/: test_auth.py  test_chat_completions.py  test_console.py  test_embeddings.py  test_error_classifier.py  test_files.py  test_health.py  test_models.py  test_responses.py  test_stream_error_payload.py  test_streaming.py  test_uploads.py  test_usage.py
tests/browser/: test_common.py  test_doubao.py  test_qwen.py
tests/cli/: test_cli_help.py  test_config_command.py  test_doctor_command.py  test_login_browser.py  test_login_manual.py  test_onboard.py  test_provider_commands.py  test_start_command.py  test_status_commands.py  test_verify_command.py
tests/config/: test_paths.py
tests/e2e/: test_http_e2e.py
tests/failover/: test_errors.py  test_executor.py
tests/gateway/: test_normalized_request.py  test_provider_router.py
tests/models/: test_discovery.py  test_openai_compat_resolve.py
tests/opentoken/: test_bridge.py  test_bridge_apply.py
tests/pool/: test_strategy.py  test_worker.py
(+115 files in other folders)
